<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <TextView
        android:layout_weight="0.1"
        android:id="@+id/seekBarValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:fontFamily="sans-serif"
        android:text="@string/beginning"
        android:textAlignment="center"
        android:textSize="20sp">
    </TextView>

    <SeekBar
        android:layout_weight="0.1"
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:max="400"
        android:progress="50" />

    <EditText
        android:textSize="20sp"
        android:layout_weight="0.4"
        android:id="@+id/InputText"
        android:textAlignment="center"
        android:layout_margin="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/helper"
        android:fontFamily="sans-serif"/>

    <TextView
        android:autoSizeTextType="uniform"
        android:autoSizeMaxTextSize="25sp"
        android:autoSizeMinTextSize="15sp"
        android:layout_weight="0.4"
        android:id="@+id/OutputText"
        android:layout_margin="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:textAlignment="center"
        android:text="@string/reminder">
    </TextView>

    <Button
        android:background="@drawable/button"
        android:layout_weight="0.1"
        android:id="@+id/MainButton"
        android:layout_margin="30sp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:textColor="#BF3030"
        android:textSize="30sp"
        android:textAllCaps="false"
        android:onClick="onMainButtonClcik"
        android:text="@string/ct">
    </Button>
</LinearLayout>